UserManagementInfrastructure/manifests/deployment.yml
# https://medium.com/@karthi.net/kubernetes-tutorial-create-deployments-using-yaml-file-90ea901a2f74
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermanagement-deployment
  labels:
    app: user-management-web-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management-web-api
  template:
    metadata:
      labels:
        app: user-management-web-api
    spec:
      containers:
        - name: user-management-web-api
          image: widgetsy6bsmxj7ail7y.azurecr.io/usermanagementwebapi:latest
          ports:
            - containerPort: 80
