UserManagementInfrastructure/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-management-web-api
  labels:
    app: user-management-web-api
spec:
  type: NodePort
  ports:
    - port: 80
    nodePort: 30080
  selector:
    app: user-management-web-api
